--- a/test/storybook/docs/Testing/Decorators/Component/@Component.mdx
+++ b/test/storybook/docs/Testing/Decorators/Component/@Component.mdx
@@ -2,20 +2,16 @@ import rules from './rules.json';
 import { Meta } from '@storybook/addon-docs/blocks';
 import data from './coverage-data.json';
 import overlay from './coverage-overlay.json';
+import React, { useMemo, useState } from 'react';
+import RulesAtAGlance from '../_shared/RulesAtAGlance.jsx';
 
 <Meta title="Testing/Decorators/@Component"/>
 
-# @Component Testing Matrix
+# @Component Decorator
 
 The `@Component` decorator is used to define a Stencil custom element, specifying its tag name, style, encapsulation, shadow DOM options, and other metadata. It is the entry point for all Stencil components and controls how they are registered and rendered.
 
-## Rules (at a glance)
-- Styles are mutually exclusive: use exactly one of {rules.exclusiveGroups.find(g => g.name === 'styles').members.join(' | ')}.
-- Encapsulation flags are mutually exclusive: {rules.exclusiveGroups.find(g => g.name === 'encapsulation').members.join(' and ')} cannot both be `true`.
-- Render modes: {rules.modes.map(m => m.name).join(', ')}.
-- Matrix conventions: generated examples are grouped by render mode under `matrix/shadow`, `matrix/scoped`, and `matrix/light`; CSS asset paths are parent‑relative from grouped subfolders.
-
-## Component Properties
+## @Component Decorator Properties
 
 The `@Component` decorator accepts an object with the following properties:
 
@@ -27,9 +23,13 @@ The `@Component` decorator accepts an object with the following properties:
 -   **`styleUrls`** (`string[]`): An array of URLs for multiple stylesheets to be applied to the component. This is mutually exclusive with `styleUrl` and `styles`.
 -   **`styles`** (`string`): A string containing the CSS text to be applied directly to the component. This is mutually exclusive with `styleUrl` and `styleUrls`.
 
-## Rendering Modes and Matrix Grouping
+## Rules (at a glance)
+<RulesAtAGlance rules={rules} sourcePath="./rules.json" />
+- Component grouping: generated components are grouped by mode under `matrix/shadow`, `matrix/scoped`, and `matrix/light`. CSS paths are relative to those folders.
 
-To simplify navigation of the generated matrix, components are organized one level deep by render mode under `test/wdio/component-decorator/matrix/`:
+## Rendering Modes and Component Grouping
+
+To simplify navigation, generated components are organized one level deep by render mode under `test/wdio/component-decorator/matrix/`:
 
 - `shadow/` (shadow: true)
   - Uses native Shadow DOM for real DOM and CSS encapsulation
@@ -111,61 +111,143 @@ Planned WDIO tests will exercise representative permutations of the `@Component`
   <strong>{data.coverage.percent}%</strong>)
 </div>
 
-<div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
-  <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
-    <colgroup>
-      <col style={{ width: '4%' }} />
-      <col style={{ width: '10%' }} />
-      <col style={{ width: '10%' }} />
-      <col style={{ width: '10%' }} />
-      <col style={{ width: '10%' }} />
-      <col style={{ width: '10%' }} />
-      <col style={{ width: '10%' }} />
-      <col style={{ width: '10%' }} />
-      <col style={{ width: '16%' }} />
-    </colgroup>
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>shadow</th>
-        <th>scoped</th>
-        <th>assetsDirs</th>
-        <th>formAssociated</th>
-        <th>styleUrl</th>
-        <th>styleUrls</th>
-        <th>styles</th>
-        <th>Tested / Test Cases</th>
-      </tr>
-    </thead>
-    <tbody>
-      {data.coveredPermutations.map((p, i) => {
-        const optionKey = p.options.join('|');
-        const oi = (overlay.items || []).find(x => x.optionsKey === optionKey);
-        const tested = oi?.tested;
-        const tests = oi?.testedBy || [];
-        return (
-          <tr key={i} style={{ background: tested ? '#fbfffb' : '#fff' }}>
-            <td>{i + 1}</td>
-            {p.options.map((opt, j) => (
-              <td key={j}>{opt}</td>
-            ))}
-            <td>
-              <div style={{ display: 'flex', alignItems: 'center', gap: 8 }}>
-                <span style={{ minWidth: 16, textAlign: 'center' }}>{tested ? <span style={{ color: 'green' }}>✔</span> : <span style={{ color: '#999' }}>—</span>}</span>
-                {tests.length ? (
-                  <ul style={{ margin: 0, paddingLeft: 16 }}>
-                    {tests.map((t, k) => (
-                      <li key={k}>{t}</li>
-                    ))}
-                  </ul>
-                ) : (
-                  <em>—</em>
-                )}
-              </div>
-            </td>
+export const CoveredPermutationsTable = () => {
+  const [expanded, setExpanded] = useState(false);
+
+  const rows = useMemo(() => {
+    const items = overlay.items || [];
+    return (data.coveredPermutations || []).map((p, i) => {
+      const optionKey = p.options.join('|');
+      const oi = items.find((x) => x.optionsKey === optionKey) || {};
+      return {
+        index: i,
+        options: p.options,
+        tested: !!oi.tested,
+        tests: oi.testedBy || [],
+      };
+    });
+  }, []);
+
+  const total = rows.length;
+
+  const renderTable = (rowsToRender) => (
+    <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
+      <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
+        <colgroup>
+          <col style={{ width: '4%' }} />
+          <col style={{ width: '10%' }} />
+          <col style={{ width: '10%' }} />
+          <col style={{ width: '10%' }} />
+          <col style={{ width: '10%' }} />
+          <col style={{ width: '10%' }} />
+          <col style={{ width: '10%' }} />
+          <col style={{ width: '10%' }} />
+          <col style={{ width: '16%' }} />
+        </colgroup>
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>shadow</th>
+            <th>scoped</th>
+            <th>assetsDirs</th>
+            <th>formAssociated</th>
+            <th>styleUrl</th>
+            <th>styleUrls</th>
+            <th>styles</th>
+            <th>Tested / Test Cases</th>
           </tr>
-        );
-      })}
-    </tbody>
-  </table>
-</div>
+        </thead>
+        <tbody>
+          {rowsToRender.map((r) => (
+            <tr key={r.index} style={{ background: r.tested ? '#fbfffb' : '#fff' }}>
+              <td>{r.index + 1}</td>
+              {r.options.map((opt, j) => (
+                <td key={j}>{opt}</td>
+              ))}
+              <td>
+                <div style={{ display: 'flex', alignItems: 'center', gap: 8 }}>
+                  <span style={{ minWidth: 16, textAlign: 'center' }}>
+                    {r.tested ? <span style={{ color: 'green' }}>✔</span> : <span style={{ color: '#999' }}>—</span>}
+                  </span>
+                  {r.tests.length ? (
+                    <ul style={{ margin: 0, paddingLeft: 16 }}>
+                      {r.tests.map((t, k) => (
+                        <li key={k}>{t}</li>
+                      ))}
+                    </ul>
+                  ) : (
+                    <em>—</em>
+                  )}
+                </div>
+              </td>
+            </tr>
+          ))}
+        </tbody>
+      </table>
+    </div>
+  );
+
+  if (!expanded) {
+    const preview = rows.slice(0, 3);
+    return (
+      <div style={{ position: 'relative' }}>
+        {renderTable(preview)}
+        {total > 3 && (
+          <>
+            <div
+              style={{
+                position: 'absolute',
+                left: 0,
+                right: 0,
+                bottom: 40,
+                height: 48,
+                background: 'linear-gradient(180deg, rgba(255,255,255,0) 0%, #fff 90%)',
+                pointerEvents: 'none',
+              }}
+            />
+            <div style={{ display: 'flex', justifyContent: 'center', marginTop: -8 }}>
+              <button
+                onClick={() => setExpanded(true)}
+                style={{
+                  padding: '6px 12px',
+                  border: '1px solid #ddd',
+                  background: '#f8f8f8',
+                  borderRadius: 4,
+                  cursor: 'pointer',
+                  fontSize: 12,
+                }}
+                aria-label={`Show all ${total} permutations`}
+              >
+                Show all {total}
+              </button>
+            </div>
+          </>
+        )}
+      </div>
+    );
+  }
+
+  return (
+    <div>
+      <div style={{ display: 'flex', justifyContent: 'flex-end', marginBottom: 8 }}>
+        <button
+          onClick={() => setExpanded(false)}
+          style={{
+            padding: '6px 12px',
+            border: '1px solid #ddd',
+            background: '#f8f8f8',
+            borderRadius: 4,
+            cursor: 'pointer',
+            fontSize: 12,
+          }}
+          aria-label="Collapse permutations table"
+        >
+          Collapse table
+        </button>
+      </div>
+      {renderTable(rows)}
+    </div>
+  );
+};
+
+<CoveredPermutationsTable />
