--- a/test/storybook/docs/Testing/Decorators/Overview.mdx
+++ b/test/storybook/docs/Testing/Decorators/Overview.mdx
@@ -5,30 +5,12 @@ import eventData from './event-coverage-data.json';
 import listenData from './listen-coverage-data.json';
 import methodData from './method-coverage-data.json';
 
-# Decorator Test Coverage Overview
+# Decorator Testing Overview
 
 This section tracks test coverage for all Stencil decorators. Each decorator has its own matrix and coverage notes. Use this as a reference for contributors and maintainers.
 
-## Project Phases
-
-### Phase 1 (Generation-first docs)
-- Document all properties of each decorator.
-- Define a permutation matrix in `rules.json` for the decorator.
-- Generate components from the matrix via script; organize by mode under `matrix/<mode>/`.
-- Verify the matrix and compile all generated components to discover actual compiler rules (e.g., mutually-exclusive options).
-- Update `rules.json` with discovered rules and adjust the matrix; regenerate until all components compile.
-- Prevent drift: docs render rules from `rules.json` using `RulesAtAGlance`, and a verify script checks accuracy.
-- Doc layout convention per decorator:
-  1) Decorator Properties
-  2) Rules (at a glance)
-  3) Generated Components
-  4) Component Grouping
-  5) Test Cases
-
-> Compiling the full set of generated components is the signal in Phase 1: it reveals the true compiler‑enforced rules and gives confidence the compiler can build every permutation. Success criterion: 100% compile. Tests land in Phase 2.
-
 ## What Are Decorators in Stencil?
-Stencil decorators are special TypeScript annotations that add metadata and behavior to component classes, properties, methods, and events. They enable features like reactive state, property reflection, event emission, and lifecycle hooks. Decorators are a core part of Stencil's API and are used to define how components interact with the DOM and with each other.
+Stencil decorators are special TypeScript annotations that add metadata and behavior to component classes, properties, methods, and events. They enable features like reactive state, property reflection, and event emission. Decorators are a core part of Stencil's API and are used to define how components interact with the DOM and with each other.
 
 ### Example Stencil Component Using Decorators
 ```tsx
@@ -96,6 +78,32 @@ Below are all the decorators provided by Stencil. Each decorator has a dedicated
   handleWindowClick() { /* ... */ }
   ```
 
+## Project Phases
+
+### Phase 1. Documentation and Component Generation
+
+- Document all properties of each decorator.
+- Define a permutation matrix for the Decorator based on the properties
+- Create a script to generate components based off of the permutations matrix
+- Verify the matrix and `compile all generated components` to discover `actual compiler rules` (e.g., mutually-exclusive options).
+- Update `rules.json` with discovered rules and adjust the matrix; regenerate until all components compile.
+- Prevent drift: docs render rules from `rules.json` using `RulesAtAGlance`, and a verify script checks accuracy.
+- Doc layout convention per decorator:
+  1) Decorator Properties
+  2) Rules (at a glance)
+  3) Generated Components
+  4) Component Grouping
+  5) Test Cases
+
+<div role="note" aria-label="Phase 1 Goal"
+  style={{ border: '1px solid #e0e0e0', background: '#fffbe6', padding: 12, borderRadius: 6, margin: '12px 0' }}>
+  <div style={{ fontWeight: 600, marginBottom: 6 }}>Phase 1 Goal</div>
+  <ul style={{ margin: 0, paddingLeft: 18 }}>
+    <li>Stress-test the compiler by generating a broad set of components (unique option combinations).</li>
+    <li>Discover the true, compiler‑enforced rules and record them in <code>rules.json</code>.</li>
+    <li>Regenerate until <strong>100%</strong> of generated components compile cleanly.</li>
+  </ul>
+</div>
 
 ## Coverage Summary
 
